feat:DuckDuckGo added,Error response added, Bing and Google Search tags updated,code refactored